--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -25,8 +25,9 @@ ext {
             mongoDB                 : "org.springframework.boot:spring-boot-starter-data-mongodb:${versions.springBoot}",
 
             springBootRabbitMQ      : "org.springframework.boot:spring-boot-starter-amqp:$versions.springBoot",
-            springCloudZipkin           : "org.springframework.cloud:spring-cloud-sleuth-zipkin:${versions.springCloud}",
+            springCloudZipkin       : "org.springframework.cloud:spring-cloud-sleuth-zipkin:${versions.springCloud}",
 
+            springBootDataRedis     : "org.springframework.boot:spring-boot-starter-data-redis:$versions.springBoot",
 
             //MailSender
             springBootMailSender    : "org.springframework.boot:spring-boot-starter-mail:$versions.springBoot",
